# xx-admin

./: .gitignore  Cargo.toml  Dockerfile  README.md  config.toml.example
.github/workflows/: build-admin.yml  build-image.yml  build-new.yml  build-study.yml
admin_serv/: Cargo.toml  Dioxus.toml  Dockerfile  build.rs  config.example.toml  tailwind.config.js
admin_serv/src/: backend.rs  config.rs  cron.rs  home.rs  main.rs  push_notice.rs  qr.rs  state.rs
admin_serv/src/backend/: api.rs  config.rs  cron.rs  push_notice.rs  session.rs
admin_serv/src/backend/xxscore/: fetcher.rs  mod.rs  xx.rs
admin_serv/src/xxscore/: fetcher.rs  mod.rs
infra/: Cargo.toml
infra/src/: otel.rs
src/: config.rs  cron.rs  health.rs  main.rs  otel.rs  wx.rs
src/xxscore/: fetcher.rs  mod.rs  yesterday_score.js
study/: Cargo.toml
study/src/: core.rs  eval.rs  info.js  lib.rs  play.js  pool.rs  qrcode.rs  session_state.rs  state.rs  today_score.js  utils.rs  xx.rs
study_core/: Cargo.toml
study_core/src/: core.rs  eval.rs  lib.rs  qrcode.rs  smooth_scroll.js  state.rs  utils.rs  xx.rs
study_serv/: .gitignore  Cargo.toml  Dioxus.toml  Dockerfile  README.md  config.example.toml
study_serv/src/: backend.rs  home.rs  main.rs  sleep.rs  wx_redirect.rs  xx.rs
study_serv/src/backend/: conf.rs  otel.rs  user_validator.rs
wx/: Cargo.toml
wx/src/: lib.rs  msg.rs
