[workspace]
members = ["study", "wx", "study_serv", "study_core", "admin_serv", "infra"]

[workspace.package]
version = "1.3.7"

[workspace.dependencies]
anyhow = "1.0.75"
async-trait = "0.1.74"
chrono = "0.4.31"
serde = "1.0.190"
tracing = "0.1.40"


[profile.release]
opt-level = "z"     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = "abort"     # Abort on panic
strip = true        # Automatically strip symbols from the binary.