[package]
name = "admin_serv"
version.workspace = true
edition = "2021"


[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
headless_chrome = { version = "1.0.7" }
reqwest = { workspace = true, features = ["json", "multipart"] }
serde = { workspace = true }
serde_json = "1.0.108"
tokio = { version = "1.33.0", features = ["full"] }
tracing = { workspace = true }
toml = "0.8.6"
clap = { version = "4.4.8", features = ["derive", "error-context", "help", "std"] }
axum = "0.6.20"
wx = { path = "../wx" }
infra = { path = "../infra" }
form_urlencoded = "1.2.0"

[dev-dependencies]
tracing-subscriber = { version = "0.3.18" }

