[package]
name = "infra"
edition = "2021"
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing-opentelemetry = { version = "0.22.0" }
opentelemetry = { version = "0.21.0", features = ["trace"] }
opentelemetry_sdk = { version = "0.21.0", features = ["trace", "rt-tokio"] }
opentelemetry-stdout = { version = "0.2.0", features = ["trace"] }
opentelemetry-otlp = { version = "0.14.0", features = ["default"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
anyhow.workspace = true
tracing.workspace = true