[package]
name = "study"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
bardecoder = "0.5.0"
bb8 = "0.8.1"
chrono = { workspace = true, features = ["serde"] }
form_urlencoded = "1.2.0"
headless_chrome = "1.0.7"
image = "0.24.7"
rand = "0.8.5"
reqwest = { workspace = true, features = ["json", "multipart"] }
serde = { workspace = true }
serde_json = "1.0.108"
tokio = { version = "1.33.0", features = ["full"] }
tracing = { workspace = true }
url = "2.4.1"

wx = { path = "../wx" }

[dev-dependencies]
tracing-subscriber = "0.3.17"
