[package]
name = "study_core"
version.workspace = true
edition = "2021"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
bardecoder = "0.5.0"
chrono = { workspace = true, features = ["serde"] }
form_urlencoded = "1.2.0"
headless_chrome = { version = "1.0.7", optional = true }
image = "0.24.7"
qrcode-generator = "4.1.9"
rand = { version = "0.8.5", optional = true }
reqwest = { workspace = true, features = ["json", "multipart"], optional = true }
serde = { workspace = true }
serde_json = "1.0.108"
tokio = { version = "1.33.0", optional = true, default-features = false }
tokio-util = { version = "0.7.10", optional = true }
tracing = { workspace = true }
url = "2.4.1"


[dev-dependencies]
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
sysinfo = "0.29.10"

[features]
default = ["server"]
server = ["hydrate", "headless_chrome", "rand", "tokio/full", "reqwest", "tokio-util"]
hydrate = []
