[package]
name = "study_serv"
version = "0.1.0"
edition = "2021"


[dependencies]
axum = { version = "0.6.20", optional = true }
dioxus = "0.4.0"
dioxus-fullstack = "0.4.1"
reqwest.workspace = true
serde.workspace = true
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tracing-wasm = "0.2.1"
anyhow.workspace = true
tracing.workspace = true
wx = { path = "../wx", optional = true }
study = { path = "../study", optional = true, default-features = false }
toml = { version = "0.8.8", optional = true }
tokio = { version = "1.34.0", optional = true }
form_urlencoded = "1.2.0"
tracing-opentelemetry = { version = "0.22.0", optional = true }
opentelemetry = { version = "0.21.0", features = ["trace"], optional = true }
opentelemetry_sdk = { version = "0.21.0", features = ["trace", "rt-tokio"], optional = true }
opentelemetry-stdout = { version = "0.2.0", features = ["trace"], optional = true }
opentelemetry-otlp = { version = "0.14.0", features = ["default"], optional = true }
wasm-bindgen = "0.2.88"
wasm-bindgen-futures = "0.4.38"
js-sys = "0.3.65"
web-sys = { version = "0.3.65" , features = ["WorkerGlobalScope"]}

[features]
default = []
ssr = ["axum", "tokio/full", "dioxus-fullstack/axum", "toml", "study/default", "wx", "tracing-opentelemetry", "opentelemetry", "opentelemetry_sdk", "opentelemetry-stdout", "opentelemetry-otlp"]
web = ["dioxus-fullstack/web", "study/hydrate", "tokio/time"]
