[package]
name = "study_serv"
version.workspace = true
edition = "2021"


[dependencies]
axum = { version = "0.6.20", optional = true }
dioxus = "0.4.0"
dioxus-fullstack = "0.4.1"
serde.workspace = true
tracing-wasm = { version = "0.2.1", optional = true }
anyhow.workspace = true
tracing.workspace = true
study = { path = "../study", optional = true, default-features = false }
study_core = { path = "../study_core", optional = true, default-features = false }
toml = { version = "0.8.8", optional = true }
tokio = { version = "1.34.0", default-features = false, optional = true }
form_urlencoded = "1.2.0"
wasm-bindgen-futures = "0.4.38"
futures-util = "0.3.29"
qrcode-generator = "4.1.9"
base64 = "0.21.5"
gloo = { version = "0.10.0", features = ["futures"] }
web-sys = { version = "0.3.65", features = ["Window", "Navigator"] }
wasm-bindgen = "0.2.88"
clap = { version = "4.4.8", features = ["derive", "error-context", "help", "std"], optional = true }
tower = { version = "0.4.13", optional = true }
tower-http = { version = "0.4.0", features = ["fs", "trace", "compression-gzip", "compression-deflate", "compression-zstd", "async-compression", "cors"], optional = true }
infra = { path = "../infra", optional = true }

[features]
default = []
ssr = ["axum", "tokio/full", "dioxus-fullstack/axum", "dioxus-fullstack/router", "toml", "study/default", "study_core/default", "clap", "tower", "tower-http", "infra"]
web = ["dioxus-fullstack/web", "dioxus-fullstack/router", "tokio/time", "study_core/hydrate", "tracing-wasm"]
dev = []
