[package]
name = "wx"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow = "1.0.75"
async-trait = "0.1.74"
chrono = "0.4.31"
reqwest = { version = "0.11.22", features = ["json", "multipart"] }
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.33.0", features = ["sync", "macros"] }
tracing = "0.1.40"
