[package]
name = "wx"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
reqwest = { version = "0.11.22", features = ["json", "multipart"] }
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.33.0", features = ["sync", "macros", "rt", "rt-multi-thread"] }
tracing = { workspace = true }

[dev-dependencies]
assert-json-diff = "2.0.2"
tracing-subscriber = "0.3.17"
